api: Extend room members object with `isReady` field (#19)
